[gd_scene load_steps=2 format=3 uid="uid://cx6g000000000"]

[ext_resource type="Script" path="res://scenes/InstructionView.gd" id="1_script"]

[node name="InstructionView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.08, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="RikishiPanel" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="RikishiImage" type="TextureRect" parent="HBoxContainer/RikishiPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="StatusContainer" type="VBoxContainer" parent="HBoxContainer/RikishiPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -250.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 5

[node name="NameLabel" type="Label" parent="HBoxContainer/RikishiPanel/StatusContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "力士名"
horizontal_alignment = 1

[node name="RankLabel" type="Label" parent="HBoxContainer/RikishiPanel/StatusContainer"]
layout_mode = 2
text = "番付: 序ノ口"
horizontal_alignment = 1

[node name="AgeLabel" type="Label" parent="HBoxContainer/RikishiPanel/StatusContainer"]
layout_mode = 2
text = "18歳"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/RikishiPanel/StatusContainer"]
layout_mode = 2

[node name="MotivationLabel" type="Label" parent="HBoxContainer/RikishiPanel/StatusContainer"]
layout_mode = 2
text = "やる気:"

[node name="MotivationBar" type="ProgressBar" parent="HBoxContainer/RikishiPanel/StatusContainer"]
layout_mode = 2
value = 50.0

[node name="TrustLabel" type="Label" parent="HBoxContainer/RikishiPanel/StatusContainer"]
layout_mode = 2
text = "信頼度:"

[node name="TrustBar" type="ProgressBar" parent="HBoxContainer/RikishiPanel/StatusContainer"]
layout_mode = 2
value = 30.0

[node name="ConditionLabel" type="Label" parent="HBoxContainer/RikishiPanel/StatusContainer"]
layout_mode = 2
text = "調子: 普通"
horizontal_alignment = 1

[node name="CommandPanel" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="HBoxContainer/CommandPanel"]
layout_mode = 2
text = "指導メニュー"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/CommandPanel"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="BtnTrainBody" type="Button" parent="HBoxContainer/CommandPanel/GridContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "身体強化"

[node name="BtnTrainTech" type="Button" parent="HBoxContainer/CommandPanel/GridContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "技術指導"

[node name="BtnTalk" type="Button" parent="HBoxContainer/CommandPanel/GridContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "対話"

[node name="BtnRest" type="Button" parent="HBoxContainer/CommandPanel/GridContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "休養"

[node name="Spacer" type="Control" parent="HBoxContainer/CommandPanel"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="BtnRetire" type="Button" parent="HBoxContainer/CommandPanel"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
text = "引退勧告"

[node name="LogPanel" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="LogLabel" type="RichTextLabel" parent="HBoxContainer/LogPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "指導記録..."
